--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
 <script defer src="/static/js/marked.min.js"></script>
 <script defer src="/static/js/eventemitter3.umd.min.js"></script>
 <script defer src="/static/js/html2canvas.min.js"></script>
+<script defer src="/static/js/lsplugin.core.js"></script>
 <script defer src="/static/js/react.production.min.js"></script>
 <script defer src="/static/js/react-dom.production.min.js"></script>
 <script defer src="/static/js/ui.js"></script>
