--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
 <script defer src="/static/js/lsplugin.core.js"></script>
 <script defer src="/static/js/react.production.min.js"></script>
 <script defer src="/static/js/react-dom.production.min.js"></script>
+<script defer src="/static/js/libs/bundle.js"></script>
 <script defer src="/static/js/ui.js"></script>
 <script defer src="/static/js/shared.js"></script>
 <script defer src="/static/js/main.js"></script>
