enhance(capacitor): add ionic ui

--- a/resources/capacitor/index.html
+++ b/resources/capacitor/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="minimum-scale=1, initial-scale=1, maximum-scale=1, width=device-width, shrink-to-fit=no" name="viewport">
+    <meta content="minimum-scale=1, initial-scale=1, maximum-scale=1, width=device-width, shrink-to-fit=no"
+          name="viewport">
+    <link href="./ionic.bundle.css" rel="stylesheet">
+    <script type="module" src="./js/ionic.esm.js"></script>
+    <script nomodule src="./js/ionic.js"></script>
     <link href="./style.css" rel="stylesheet" type="text/css">
     <title>Logseq: A privacy-first platform for knowledge management and collaboration</title>
 </head>
