--- a/resources/capacitor/index.html
+++ b/resources/capacitor/index.html
@@ -9,11 +9,16 @@
 </head>
 <body>
 <div id="root"></div>
+<script defer src="./js/highlight.min.js"></script>
+<script defer src="./js/interact.min.js"></script>
+<script defer src="./js/marked.min.js"></script>
+<script defer src="./js/eventemitter3.umd.min.js"></script>
 <script defer src="./js/react.production.min.js"></script>
 <script defer src="./js/react-dom.production.min.js"></script>
 <script defer src="./js/prop-types.min.js"></script>
 <script defer type="module" src="./js/ionic.esm.js"></script>
 <script defer src="./js/tabler-icons-react.min.js"></script>
+<script defer src="./js/ui.js"></script>
 <script defer src="./shared.js"></script>
 <script defer src="./main.js"></script>
 <script>
