enhance(capacitor): missing styles

--- a/resources/capacitor/index.html
+++ b/resources/capacitor/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-color="logseq">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0">
@@ -18,6 +18,7 @@
 <script defer src="./js/prop-types.min.js"></script>
 <script defer type="module" src="./js/ionic.esm.js"></script>
 <script defer src="./js/tabler-icons-react.min.js"></script>
+<script defer src="./js/tabler.ext.js"></script>
 <script defer src="./js/ui.js"></script>
 <script defer src="./shared.js"></script>
 <script defer src="./main.js"></script>
