enhance(capacitor): add login modal page

--- a/resources/capacitor/index.html
+++ b/resources/capacitor/index.html
@@ -20,6 +20,7 @@
 <script defer src="./js/tabler-icons-react.min.js"></script>
 <script defer src="./js/tabler.ext.js"></script>
 <script defer src="./js/ui.js"></script>
+<script defer src="./js/amplify.js"></script>
 <script defer src="./shared.js"></script>
 <script defer src="./main.js"></script>
 <script>
