--- a/resources/capacitor/index.html
+++ b/resources/capacitor/index.html
@@ -19,6 +19,7 @@
 <script defer type="module" src="./js/ionic.esm.js"></script>
 <script defer src="./js/tabler-icons-react.min.js"></script>
 <script defer src="./js/tabler.ext.js"></script>
+<script defer src="./js/code-editor.js"></script>
 <script defer src="./js/ui.js"></script>
 <script defer src="./js/amplify.js"></script>
 <script defer src="./shared.js"></script>
