fix(capacitor): incorrect resource

--- a/resources/capacitor/index.html
+++ b/resources/capacitor/index.html
@@ -31,8 +31,8 @@ const portal = new MagicPortal(worker);
 <script defer src="./js/tabler-icons-react.min.js"></script>
 <script defer src="./js/tabler.ext.js"></script>
 <script defer src="./js/ui.js"></script>
-<script defer src="./js/ionic.js"></script>
 <script defer src="./js/amplify.js"></script>
+<script defer src="./ionic.js"></script>
 <script defer src="./shared.js"></script>
 <script defer src="./main.js"></script>
 <script>
