--- a/resources/capacitor/index.html
+++ b/resources/capacitor/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <div id="root"></div>
+<script>var isCapacitorNew=true</script>
 <script src="./js/magic_portal.js"></script>
 <script>let worker = new Worker('./js/worker.js')
 const portal = new MagicPortal(worker);
