--- a/resources/index.html
+++ b/resources/index.html
@@ -50,6 +50,9 @@ const portal = new MagicPortal(worker);
 <script defer src="./js/highlight.min.js"></script>
 <script defer src="./js/interact.min.js"></script>
 <script defer src="./js/marked.min.js"></script>
+<script defer type="module" src="./js/pdfjs/pdf.mjs"></script>
+<script defer type="module" src="./js/pdf_viewer3.mjs"></script>
+<script defer src="./js/eventemitter3.umd.min.js"></script>
 <script defer src="./js/html2canvas.min.js"></script>
 <script defer src="./js/lsplugin.core.js"></script>
 <script defer src="./js/react.production.min.js"></script>
