chore: restore to logseq theme

--- a/resources/capacitor/index.html
+++ b/resources/capacitor/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-color="blue">
+<html lang="en" data-color="logseq">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
