--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,8 @@
 <script defer type="module" src="/static/js/pdfjs/pdf.mjs"></script>
 <script defer type="module" src="/static/js/pdf_viewer3.mjs"></script>
 <script defer src="/static/js/eventemitter3.umd.min.js"></script>
+<script defer src="/static/js/photoswipe.umd.min.js"></script>
+<script defer src="/static/js/photoswipe-lightbox.umd.min.js"></script>
 <script defer src="/static/js/html2canvas.min.js"></script>
 <script defer src="/static/js/lsplugin.core.js"></script>
 <script defer src="/static/js/react.production.min.js"></script>
