--- a/resources/capacitor/index.html
+++ b/resources/capacitor/index.html
@@ -36,8 +36,8 @@ const portal = new MagicPortal(worker);
 <script defer src="./js/ui.js"></script>
 <script defer src="./js/amplify.js"></script>
 <script defer src="./ionic.js"></script>
-<script defer src="./shared.js"></script>
-<script defer src="./main.js"></script>
+<script defer src="./js/shared.js"></script>
+<script defer src="./js/main.js"></script>
 <script>
   document.addEventListener('DOMContentLoaded', () => {
     window.Capacitor?.Plugins?.SplashScreen?.hide()
