enhance(mobile): remove the full ionic components

--- a/resources/mobile/index.html
+++ b/resources/mobile/index.html
@@ -2,9 +2,8 @@
 <html lang="en" data-color="logseq">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link href="./ionic.bundle.css" rel="stylesheet">
-    <link href="./silkhq.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <link href="./silkhq.css" rel="stylesheet" type="text/css">
     <link href="./style.css" rel="stylesheet" type="text/css">
     <title>Logseq: A privacy-first platform for knowledge management and collaboration</title>
 </head>
@@ -36,7 +35,6 @@ const portal = new MagicPortal(worker);
 <script defer src="./js/tabler.ext.js"></script>
 <script defer src="./js/ui.js"></script>
 <script defer src="./js/amplify.js"></script>
-<script defer src="./ionic.js"></script>
 <script defer src="./silkhq.js"></script>
 <script defer src="./js/shared.js"></script>
 <script defer src="./js/main.js"></script>
