--- a/resources/mobile/index.html
+++ b/resources/mobile/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link href="./silkhq.css" rel="stylesheet" type="text/css">
-    <link href="./style.css" rel="stylesheet" type="text/css">
+    <link href="./css/silkhq.css" rel="stylesheet" type="text/css">
+    <link href="./css/style.css" rel="stylesheet" type="text/css">
     <title>Logseq: A privacy-first platform for knowledge management and collaboration</title>
 </head>
 <body>
@@ -35,7 +35,7 @@ const portal = new MagicPortal(worker);
 <script defer src="./js/tabler.ext.js"></script>
 <script defer src="./js/ui.js"></script>
 <script defer src="./js/amplify.js"></script>
-<script defer src="./silkhq.js"></script>
+<script defer src="./js/silkhq.js"></script>
 <script defer src="./js/shared.js"></script>
 <script defer src="./js/main.js"></script>
 <script defer src="./js/code-editor.js"></script>
