--- a/resources/mobile/index.html
+++ b/resources/mobile/index.html
@@ -15,7 +15,7 @@
 <script defer src="./js/interact.min.js"></script>
 <script defer src="./js/marked.min.js"></script>
 <script defer src="./js/eventemitter3.umd.min.js"></script>
-<script defer src="./js/wavesurfer.min.js"></script>
+<script defer src="./js/simple-wave-record.umd.js"></script>
 <script defer src="./js/record.min.js"></script>
 <script defer src="./js/photoswipe.umd.min.js"></script>
 <script defer src="./js/photoswipe-lightbox.umd.min.js"></script>
